# key_ctrler

./: Android.mk  Application.mk  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  config.txt  kfind.cpp  klaunch.cpp  main.cpp
